# backend/internal/core/domain/models/responses.go
@@ -13,12 +13,12 @@ type ResponseWithResult struct {
 type Response400WithResult struct {
 	Folio   string   `json:"folio,omitempty" example:"" format:"string"`
 	Message string   `json:"mensaje" example:"Operación realizada sin éxito" format:"string"`
-	Details []string `json:"resultado" example:"Error en la petición" format:"string"`
+	Details []string `json:"detalles" example:"Error en la petición" format:"string"`
 }
 type Response401WithResult struct {
 	Folio   string   `json:"folio,omitempty" example:"" format:"string"`
 	Message string   `json:"mensaje" example:"Operación realizada sin éxito" format:"string"`
-	Details []string `json:"resultado" example:"No se encontró el recurso solicitado" format:"string"`
+	Details []string `json:"detalles" example:"No se encontró el recurso solicitado" format:"string"`
 }
 type Response403WithResult struct {
 	Folio   string `json:"folio,omitempty" example:"" format:"string"`
@@ -27,12 +27,12 @@ type Response403WithResult struct {
 type Response404WithResult struct {
 	Folio   string   `json:"folio,omitempty" example:"" format:"string"`
 	Message string   `json:"mensaje" example:"Operación realizada con éxito" format:"string"`
-	Details []string `json:"resultado" example:"No se encontró el recurso solicitado" format:"string"`
+	Details []string `json:"detalles" example:"No se encontró el recurso solicitado" format:"string"`
 }
 type Response500WithResult struct {
 	Folio   string   `json:"folio,omitempty" example:"" format:"string"`
 	Message string   `json:"mensaje" example:"Operación fallida" format:"string"`
-	Details []string `json:"resultado" example:"Error interno del servidor" format:"string"`
+	Details []string `json:"detalles" example:"Error interno del servidor" format:"string"`
 }
 
 type Response409WithResult struct {
