# backend/swagger/swagger.json
@@ -20,6 +20,11 @@
     "paths": {
         "/sell": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Sell a bound",
                 "consumes": [
                     "application/json"
@@ -123,6 +128,16 @@
         "models.Response400WithResult": {
             "type": "object",
             "properties": {
+                "detalles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "example": [
+                        "Error en la petición"
+                    ]
+                },
                 "folio": {
                     "type": "string",
                     "format": "string",
@@ -132,22 +147,22 @@
                     "type": "string",
                     "format": "string",
                     "example": "Operación realizada sin éxito"
-                },
-                "resultado": {
-                    "type": "array",
-                    "items": {
-                        "type": "string",
-                        "format": "string"
-                    },
-                    "example": [
-                        "Error en la petición"
-                    ]
                 }
             }
         },
         "models.Response404WithResult": {
             "type": "object",
             "properties": {
+                "detalles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "example": [
+                        "No se encontró el recurso solicitado"
+                    ]
+                },
                 "folio": {
                     "type": "string",
                     "format": "string",
@@ -157,22 +172,22 @@
                     "type": "string",
                     "format": "string",
                     "example": "Operación realizada con éxito"
-                },
-                "resultado": {
-                    "type": "array",
-                    "items": {
-                        "type": "string",
-                        "format": "string"
-                    },
-                    "example": [
-                        "No se encontró el recurso solicitado"
-                    ]
                 }
             }
         },
         "models.Response500WithResult": {
             "type": "object",
             "properties": {
+                "detalles": {
+                    "type": "array",
+                    "items": {
+                        "type": "string",
+                        "format": "string"
+                    },
+                    "example": [
+                        "Error interno del servidor"
+                    ]
+                },
                 "folio": {
                     "type": "string",
                     "format": "string",
@@ -182,18 +197,15 @@
                     "type": "string",
                     "format": "string",
                     "example": "Operación fallida"
-                },
-                "resultado": {
-                    "type": "array",
-                    "items": {
-                        "type": "string",
-                        "format": "string"
-                    },
-                    "example": [
-                        "Error interno del servidor"
-                    ]
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
